ajout de la page régelemnt + spécification de la langue mise sur la langue kabyle.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="kab">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +25,9 @@
             <p>Thegaḍ imanik(m) aken ad tturareḍ ?</p>
             <button  id="go" class="quizz_button start">Ad uraraɣ</button>
             <a href="/testimony.html" class="quizz_button quizz_button2">Tanagit <br>( témoignage )</a>
-            <p>" Win yeγɣan taqγaylit, yissin tira-s"</p>
-            <p>- mulud nat mamar -</p>
+            <a href="/settlement.html" class="settlement">Aslagan ( règlement )</a>
+            <p>" Yella yiwen yella ulac it, Yella wayeḍ ulac it yella ..."</p>
+            <p>- mulud net mammar -</p>
         </div>
     </div>
     
