Ajout du score globale dans le fichier index.html

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
        <div class="sbloc3">
             <h1 id="playername">Ghiles Rabah</h1>
             <p>Tanmirt-ik(m) imi d-urareḍ yid-naɣ, aqlak tewweded ar tagar n wurar aggi</p>
-            <p class="c_finalscore">s : <span id="finalscore" class="finalscore"> 12 </span> tneqiḍin</p>
-            <p class="c_finalscore c_lastscore" id="c_rejouer">Tikkelt taneggarut tewweded s : <span id="lastescore" class="finalscore"> 12 </span> tneqiḍin</p>
+            <p class="c_finalscore">s : <span id="finalscore" class="finalscore"> 12</span>/200 tneqiḍin</p>
+            <p class="c_finalscore c_lastscore" id="c_rejouer">Tikkelt taneggarut tewweded s : <span id="lastescore" class="finalscore"> 12</span>/200 tneqiḍin</p>
             <button class="quizz_button start" id="rejouer">Ad ɛawdaɣ</button>
        </div>
     </div>
